deployment/spiffe/oidc/oidc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spire-ingress
  namespace: spire
spec:
  tls:
    - hosts:
        # TODO: Replace with the FQDN of the Discovery Provider that you will configure in DNS
        - demo-oidc.theidentitydigest.com
      secretName: oidc-secret
  rules:
    # TODO: Replace with the FQDN of the Discovery Provider that you will configure in DNS
    - host: demo-oidc.theidentitydigest.com
      http:
        paths:
          - path: /.well-known/openid-configuration
            pathType: Prefix
            backend:
              service:
                name: spire-oidc
                port: 
                  number: 443
